@@ -1,0 +1,6 @@
+include z.mk
+
+$(eval $(call ZMK.Import,Toolchain))
+
+.PHONY: debug
+debug: ;
